# nbconvert-rust

./: Cargo.toml  README.md  template.typ
html2typst/: Cargo.toml  LICENCE  README.md
html2typst/src/: lib.rs
html2typst/tests/: unit.rs
src/: error.rs  main.rs  markdown.rs  media.rs  notebook.rs  typst_content.rs
template/: notes.typ  template.typ
tests/: final.ipynb  final.typ  hello.ipynb  hello.typ  task3.ipynb  template.typ  test.html
tests/Shixi-3/: Task1.ipynb  Task1.typ  Task2.ipynb  Task2.typ  Task3.ipynb  Task3.typ
tests/Shixi-4/: task1.ipynb  task1.typ  task2.ipynb  task2.typ  task3.ipynb  task3.typ
tests/Shixi-5/: Task1.ipynb  Task1.typ  Task2.ipynb  Task2.typ  Task3.ipynb  Task3.typ
