[package]
name = "html2typst"
version = "0.0.1"
edition = "2021"
authors = ["Adrian J. Delgado <rust@adrianjdelgado.com>"]
description = "Convert HTML files to Typst syntax"
repository = "https://github.com/adriandelgado/html2typst"
readme = "README.md"
keywords = ["html", "typst", "converter", "html2typ", "html-to-typst"]
categories = ["text-processing", "parsing", "parser-implementations"]
license = "MIT"

[dependencies]
html5ever = "0.29.1"
markup5ever_rcdom = "0.5.0-unofficial"
